# herald

./: .gitignore  README.md  pyproject.toml
demo/: app.py
deploy/: haproxy-herald.cfg
src/whisper_service/: __init__.py  cli.py  config.py  main.py
src/whisper_service/api/: app.py
src/whisper_service/backends/: __init__.py  base.py  cuda_backend.py  factory.py  mlx_backend.py
src/whisper_service/postprocessing/: __init__.py  formatters.py
src/whisper_service/preprocessing/: __init__.py  audio.py
src/whisper_service/ui/: app.py  logger.py
src/whisper_service/ui/static/: recorder.js
src/whisper_service/ui/templates/: base.html  index.html  logs.html
tests/: test_formatters.py
