[project]
name = "herald"
version = "0.2.0"
description = "Internal speech-to-text service powered by Whisper"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
# Apple Silicon (Mac dev)
mlx = [
    "mlx-whisper>=0.4.0",
]
# NVIDIA GPU (production)
cuda = [
    "faster-whisper>=1.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]
postprocess = [
    "whisperx>=3.3.0",
]

[project.scripts]
whisper-serve = "whisper_service.main:run"
whisper-transcribe = "whisper_service.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_service"]
